Testing new vect parameter df, adds comments

--- a/Project/Assignment1/stemmer.ipynb
+++ b/Project/Assignment1/stemmer.ipynb
@@ -4,28 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing Stopwords and Stemmers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = \"Esta unidade curricular de Processamento de Linguagem Natural é extremamente divertida e útil porque nos ajuda a desenvolver novas competências no campo da Aprendizagem Computacional não muito bem lecionada pelo Carlos Sexy\""
+    "# Testing Stopwords and Stemmers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Portuguese Stopwords"
+    "## Portuguese Stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,10 +32,19 @@
     "\n",
     "stopwords_list = stopwords.words('portuguese')\n",
     "\n",
-    "# Remover algumas palavras da lista, p.ex. \"não\"\n",
+    "# Remover algumas palavras da lista, p.ex. \"não\" para manter a negação\n",
     "stopwords_list.remove('não')\n",
     "\n",
     "print(stopwords_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"Esta unidade curricular de Processamento de Linguagem Natural é extremamente divertida e útil porque nos ajuda a desenvolver novas competências no campo da Aprendizagem Computacional\""
    ]
   },
   {
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "'Esta unidade curricular Processamento Linguagem Natural extremamente divertida útil porque ajuda desenvolver novas competências campo Aprendizagem Computacional não bem lecionada Carlos Sexy'"
+       "'Esta unidade curricular Processamento Linguagem Natural extremamente divertida útil porque ajuda desenvolver novas competências campo Aprendizagem Computacional'"
       ]
      },
      "execution_count": 3,
@@ -71,12 +71,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trying some Portuguese Stemmers"
+    "## Trying some Portuguese Stemmers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,13 +84,13 @@
      "output_type": "stream",
      "text": [
       "Porter Stemmer:\n",
-      " esta unidad curricular de processamento de linguagem natur é extremament divertida e útil porqu no ajuda a desenvolv nova competência no campo da aprendizagem computacion não muito bem lecionada pelo carlo sexi\n",
+      " esta unidad curricular de processamento de linguagem natur é extremament divertida e útil porqu no ajuda a desenvolv nova competência no campo da aprendizagem computacion\n",
       "\n",
       "Snowball Portugue Stemmer:\n",
-      " esta unidad curricul de process de linguag natural é extrem divert e útil porqu nos ajud a desenvolv nov competent no camp da aprendizag computacional nã muit bem lecion pel carl sexy\n",
+      " esta unidad curricul de process de linguag natural é extrem divert e útil porqu nos ajud a desenvolv nov competent no camp da aprendizag computacional\n",
       "\n",
       "RSLP Stemmer:\n",
-      " est unidad curricul de process de lingu natur é extrem divert e útil porqu no ajud a desenvolv nov compet no camp da aprendiz computac não muit bem lecion pel carl sexy\n"
+      " est unidad curricul de process de lingu natur é extrem divert e útil porqu no ajud a desenvolv nov compet no camp da aprendiz computac\n"
      ]
     }
    ],
@@ -113,12 +113,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset"
+    "#### Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +128,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Base code to test the different Stemmers with a TfidfVectorizer and ComplementNB Classifier, later compare each other metrics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +151,7 @@
     "stopwords_list = stopwords.words('portuguese')\n",
     "stopwords_list.remove('não')\n",
     "\n",
-    "vectorizer = TfidfVectorizer(strip_accents='unicode')\n",
+    "vectorizer = TfidfVectorizer()\n",
     "\n",
     "y = dataset['label']\n",
     "\n",
@@ -162,11 +169,13 @@
     "    stop = time.time()\n",
     "    print(\"Preprocess time: %0.2fs\" % (stop - start))\n",
     "\n",
+    "    print(corpus[:5])\n",
+    "\n",
     "    # Fit vectorizer\n",
     "    X = vectorizer.fit_transform(corpus).toarray()\n",
     "    print(\"\\n(Number of samples, Number of features):\", X.shape)\n",
     "\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state=0, stratify=y, shuffle=True)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=0, stratify=y)\n",
     "\n",
     "    start = time.time()\n",
     "    clf = ComplementNB()\n",
@@ -188,38 +197,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocess time: 2.73s\n",
+      "Preprocess time: 3.78s\n",
+      "['facto não apena fruto ignorância', 'havia humor jornalismo investigação preocupação aprofundar contextualizar história isenção relato preocupação social urgência denunciar muita peça realment jornalística', 'tudo cómico fifa', 'todo permitimo organização faça totalment absurdo sentido', 'não fazem rir custa poderoso']\n",
       "\n",
-      "(Number of samples, Number of features): (16743, 15018)\n",
+      "(Number of samples, Number of features): (16743, 15170)\n",
       "\n",
-      "Model time: 0.63s\n",
+      "Model time: 0.88s\n",
       "\n",
       "Confusion matrix:\n",
-      " [[306  21 279  45  82]\n",
-      " [  3  55  61   8   6]\n",
-      " [277  73 964  97 210]\n",
-      " [ 41  22 108  92  19]\n",
-      " [ 72  32 184  22 270]]\n",
+      " [[306  22 277  44  84]\n",
+      " [  4  57  59   8   5]\n",
+      " [278  71 966  99 207]\n",
+      " [ 43  22 105  93  19]\n",
+      " [ 70  33 187  20 270]]\n",
       "\n",
       "Classification report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "        Fact       0.44      0.42      0.43       733\n",
-      "      Policy       0.27      0.41      0.33       133\n",
-      "       Value       0.60      0.59      0.60      1621\n",
+      "      Policy       0.28      0.43      0.34       133\n",
+      "       Value       0.61      0.60      0.60      1621\n",
       "    Value(+)       0.35      0.33      0.34       282\n",
       "    Value(-)       0.46      0.47      0.46       580\n",
       "\n",
-      "    accuracy                           0.50      3349\n",
-      "   macro avg       0.42      0.44      0.43      3349\n",
-      "weighted avg       0.51      0.50      0.51      3349\n",
+      "    accuracy                           0.51      3349\n",
+      "   macro avg       0.43      0.45      0.43      3349\n",
+      "weighted avg       0.51      0.51      0.51      3349\n",
       "\n"
      ]
     }
@@ -237,37 +247,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocess time: 3.16s\n",
+      "Preprocess time: 3.94s\n",
+      "['fact nã apen frut ignor', 'hav humor jornal investig preocup aprofund contextualiz histór isençã relat preocup social urgênc denunc muit pec realment jornalíst', 'tud cómic fif', 'tod permit organiz fac total absurd sent', 'nã faz rir cust poder']\n",
       "\n",
-      "(Number of samples, Number of features): (16743, 8773)\n",
+      "(Number of samples, Number of features): (16743, 9148)\n",
       "\n",
-      "Model time: 0.34s\n",
+      "Model time: 0.62s\n",
       "\n",
       "Confusion matrix:\n",
-      " [[300  30 292  40  71]\n",
-      " [  8  41  68   8   8]\n",
-      " [272  68 974 103 204]\n",
-      " [ 42  12 113  94  21]\n",
-      " [ 64  21 191  17 287]]\n",
+      " [[304  29 287  42  71]\n",
+      " [  9  38  71   8   7]\n",
+      " [260  73 981 108 199]\n",
+      " [ 40  12 117  90  23]\n",
+      " [ 66  25 189  20 280]]\n",
       "\n",
       "Classification report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "        Fact       0.44      0.41      0.42       733\n",
-      "      Policy       0.24      0.31      0.27       133\n",
-      "       Value       0.59      0.60      0.60      1621\n",
-      "    Value(+)       0.36      0.33      0.35       282\n",
-      "    Value(-)       0.49      0.49      0.49       580\n",
+      "        Fact       0.45      0.41      0.43       733\n",
+      "      Policy       0.21      0.29      0.25       133\n",
+      "       Value       0.60      0.61      0.60      1621\n",
+      "    Value(+)       0.34      0.32      0.33       282\n",
+      "    Value(-)       0.48      0.48      0.48       580\n",
       "\n",
       "    accuracy                           0.51      3349\n",
-      "   macro avg       0.42      0.43      0.43      3349\n",
+      "   macro avg       0.42      0.42      0.42      3349\n",
       "weighted avg       0.51      0.51      0.51      3349\n",
       "\n"
      ]
@@ -286,38 +297,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocess time: 5.25s\n",
+      "Preprocess time: 6.97s\n",
+      "['fact não apen frut ignor', 'hav hum jorn investig preocup aprofund contextual histór isenç relat preocup soc urg denunci muit peç real jorn', 'tud cómic fif', 'tod permit organiz faç total absurd sent', 'não faz rir cust poder']\n",
       "\n",
-      "(Number of samples, Number of features): (16743, 7843)\n",
+      "(Number of samples, Number of features): (16743, 8256)\n",
       "\n",
-      "Model time: 0.30s\n",
+      "Model time: 0.41s\n",
       "\n",
       "Confusion matrix:\n",
-      " [[298  23 292  46  74]\n",
-      " [  8  38  70  10   7]\n",
-      " [270  65 954 112 220]\n",
-      " [ 38  12 117  95  20]\n",
-      " [ 69  29 190  20 272]]\n",
+      " [[300  28 288  42  75]\n",
+      " [  6  41  70   9   7]\n",
+      " [263  66 968 112 212]\n",
+      " [ 42  11 115  93  21]\n",
+      " [ 69  28 196  18 269]]\n",
       "\n",
       "Classification report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "        Fact       0.44      0.41      0.42       733\n",
-      "      Policy       0.23      0.29      0.25       133\n",
-      "       Value       0.59      0.59      0.59      1621\n",
-      "    Value(+)       0.34      0.34      0.34       282\n",
-      "    Value(-)       0.46      0.47      0.46       580\n",
+      "      Policy       0.24      0.31      0.27       133\n",
+      "       Value       0.59      0.60      0.59      1621\n",
+      "    Value(+)       0.34      0.33      0.33       282\n",
+      "    Value(-)       0.46      0.46      0.46       580\n",
       "\n",
-      "    accuracy                           0.49      3349\n",
-      "   macro avg       0.41      0.42      0.41      3349\n",
-      "weighted avg       0.50      0.49      0.50      3349\n",
+      "    accuracy                           0.50      3349\n",
+      "   macro avg       0.41      0.42      0.42      3349\n",
+      "weighted avg       0.50      0.50      0.50      3349\n",
       "\n"
      ]
     }
@@ -327,11 +339,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The _Porter Stemmer_  had similar metrics to the others, but it does not make sense to use it since it is not a Stemmer aimed to Portuguese text, was only used as a matter of comparison.\n",
+    "\n",
+    "We will use the _RSLP Stemmer_ as it trims more the word endings and leads to less features, causing smaller matrixes for the classifiers and thus faster times and less resources.\n",
+    "Even though the preprocess time was double compared to the _Snowball Portuguese Stemmer_, the metrics are simliar, and it is only run once in the preprocess before the classification tasks, so the advantages outweight this disavantage."
+   ]
   }
  ],
  "metadata": {
@@ -353,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
