--- a/Project/Assignment1/vectorizer.ipynb
+++ b/Project/Assignment1/vectorizer.ipynb
@@ -22,22 +22,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cleanup and normalization"
+    "#### Preprocessing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['fact não apen frut ignor', 'hav hum jorn investig preocup aprofund contextual histór isenç relat preocup soc urg denunci muit peç real jorn', 'tud cómic fif', 'tod permit organiz faç total absurd sent', 'não faz rir cust poder']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "from nltk.corpus import stopwords\n",
@@ -46,24 +38,19 @@
     "corpus = []\n",
     "stemmer = RSLPStemmer()\n",
     "stopwords_list = stopwords.words('portuguese')\n",
-    "# Remover algumas palavras da lista, p.ex. \"não\"\n",
     "stopwords_list.remove('não')\n",
     "\n",
     "for i in range(0, dataset['tokens'].size):\n",
-    "    # get review, remove and lowercase non alpha chars\n",
     "    review = re.sub('[^a-zA-Z\\u00C0-\\u00ff]', ' ', dataset['tokens'][i]).lower()\n",
-    "    # split into tokens, apply stemming and remove stop words\n",
     "    review = ' '.join([stemmer.stem(w) for w in review.split() if not w in set(stopwords_list)])\n",
-    "    corpus.append(review)\n",
-    "\n",
-    "print(corpus[:5])"
+    "    corpus.append(review)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generating a data set\n",
+    "## Document Representation\n",
     "\n",
     "We need to transform the data in the reduced-vocabulary corpus into a dataset that can be handled by machine learning models. Each review in our corpus is still rather unstructured: it is simply a lists of tokens. We will transform each review into a representation that makes use of the same set of features for the whole dataset."
    ]
@@ -89,8 +76,9 @@
     "    print(\"Vectorizer fit time: %0.2fs\" % (stop - start))\n",
     "    print(\"(Number of samples, Number of features):\", X.shape)\n",
     "\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state=0, stratify=y, shuffle=True)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=0, stratify=y)\n",
     "\n",
+    "    # Classification\n",
     "    start = time.time()\n",
     "    clf = ComplementNB()\n",
     "    clf.fit(X_train, y_train)\n",
@@ -132,10 +120,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.39s\n",
+      "Vectorizer fit time: 0.38s\n",
       "(Number of samples, Number of features): (16743, 8256)\n",
       "\n",
-      "Model time: 8.69s\n",
+      "Model time: 6.37s\n",
       "\n",
       "Confusion matrix:\n",
       " [[317  30 247  47  92]\n",
@@ -182,10 +170,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.30s\n",
+      "Vectorizer fit time: 0.31s\n",
       "(Number of samples, Number of features): (16743, 8256)\n",
       "\n",
-      "Model time: 9.24s\n",
+      "Model time: 7.06s\n",
       "\n",
       "Confusion matrix:\n",
       " [[315  28 253  48  89]\n",
@@ -225,17 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.37s\n",
+      "Vectorizer fit time: 0.34s\n",
       "(Number of samples, Number of features): (16743, 8256)\n",
       "\n",
-      "Model time: 0.41s\n",
+      "Model time: 0.40s\n",
       "\n",
       "Confusion matrix:\n",
       " [[300  28 288  42  75]\n",
@@ -268,22 +256,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bi-grams"
+    "TfidfVectorizer also contains _binary_ argument, where all non-zero term counts are set to 1. This does not mean outputs will have only 0/1 values, only that the tf term in tf-idf is binary. (Set idf and normalization to False to get 0/1 outputs).\n",
+    "\n",
+    "So we will only stick to the 3 representations above and procede testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.52s\n",
+      "Vectorizer fit time: 0.34s\n",
+      "(Number of samples, Number of features): (16743, 8256)\n",
+      "\n",
+      "Model time: 0.71s\n",
+      "\n",
+      "Confusion matrix:\n",
+      " [[ 307   19  306   38   63]\n",
+      " [   9   33   77    8    6]\n",
+      " [ 256   45 1045   95  180]\n",
+      " [  37    9  126   87   23]\n",
+      " [  70   23  209   21  257]]\n",
+      "\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.45      0.42      0.43       733\n",
+      "      Policy       0.26      0.25      0.25       133\n",
+      "       Value       0.59      0.64      0.62      1621\n",
+      "    Value(+)       0.35      0.31      0.33       282\n",
+      "    Value(-)       0.49      0.44      0.46       580\n",
+      "\n",
+      "    accuracy                           0.52      3349\n",
+      "   macro avg       0.43      0.41      0.42      3349\n",
+      "weighted avg       0.51      0.52      0.51      3349\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_vectorizer(TfidfVectorizer(binary=True, use_idf=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bi-grams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectorizer fit time: 0.53s\n",
       "(Number of samples, Number of features): (16743, 61558)\n",
       "\n",
-      "Model time: 67.52s\n",
+      "Model time: 60.16s\n",
       "\n",
       "Confusion matrix:\n",
       " [[257 177 153  68  78]\n",
@@ -314,17 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.62s\n",
+      "Vectorizer fit time: 0.51s\n",
       "(Number of samples, Number of features): (16743, 61558)\n",
       "\n",
-      "Model time: 59.72s\n",
+      "Model time: 64.26s\n",
       "\n",
       "Confusion matrix:\n",
       " [[257 176 153  68  79]\n",
@@ -355,17 +393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.56s\n",
+      "Vectorizer fit time: 0.82s\n",
       "(Number of samples, Number of features): (16743, 61558)\n",
       "\n",
-      "Model time: 3.35s\n",
+      "Model time: 4.47s\n",
       "\n",
       "Confusion matrix:\n",
       " [[263 173 157  63  77]\n",
@@ -403,17 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.82s\n",
+      "Vectorizer fit time: 0.63s\n",
       "(Number of samples, Number of features): (16743, 69814)\n",
       "\n",
-      "Model time: 70.65s\n",
+      "Model time: 70.00s\n",
       "\n",
       "Confusion matrix:\n",
       " [[286  58 204  96  89]\n",
@@ -444,17 +482,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.66s\n",
+      "Vectorizer fit time: 0.62s\n",
       "(Number of samples, Number of features): (16743, 69814)\n",
       "\n",
-      "Model time: 72.80s\n",
+      "Model time: 71.15s\n",
       "\n",
       "Confusion matrix:\n",
       " [[283  61 201  96  92]\n",
@@ -485,17 +523,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.63s\n",
+      "Vectorizer fit time: 0.64s\n",
       "(Number of samples, Number of features): (16743, 69814)\n",
       "\n",
-      "Model time: 4.49s\n",
+      "Model time: 4.88s\n",
       "\n",
       "Confusion matrix:\n",
       " [[ 292   26  287   55   73]\n",
@@ -528,57 +566,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explore parameters"
+    "### Conclusions\n",
+    "\n",
+    "As we can see the _TfidfVectorizer_ achieve better results (not by much), and we think it is better to also take into account for the document frequency and not only the term count, so this is the Vectorizer that we will use for the classification tasks"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Skip accents"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vectorizer fit time: 0.30s\n",
-      "(Number of samples, Number of features): (16743, 8256)\n",
-      "\n",
-      "Model time: 0.37s\n",
-      "\n",
-      "Confusion matrix:\n",
-      " [[300  28 288  42  75]\n",
-      " [  6  41  70   9   7]\n",
-      " [263  66 968 112 212]\n",
-      " [ 42  11 115  93  21]\n",
-      " [ 69  28 196  18 269]]\n",
-      "\n",
-      "Classification report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "        Fact       0.44      0.41      0.42       733\n",
-      "      Policy       0.24      0.31      0.27       133\n",
-      "       Value       0.59      0.60      0.59      1621\n",
-      "    Value(+)       0.34      0.33      0.33       282\n",
-      "    Value(-)       0.46      0.46      0.46       580\n",
-      "\n",
-      "    accuracy                           0.50      3349\n",
-      "   macro avg       0.41      0.42      0.42      3349\n",
-      "weighted avg       0.50      0.50      0.50      3349\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "vect = TfidfVectorizer()\n",
-    "vect.fit_transform(corpus).toarray()\n",
-    "test_vectorizer(vect)"
+    "### Explore parameters\n",
+    "\n",
+    "In this section we will explore some of the parameters in order to achieve the best results possible while minimizing classification time"
    ]
   },
   {
@@ -590,38 +589,150 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizer fit time: 0.40s\n",
-      "(Number of samples, Number of features): (16743, 7843)\n",
+      "Vectorizer fit time: 0.95s\n",
+      "(Number of samples, Number of features): (16743, 69814)\n",
       "\n",
-      "Model time: 0.35s\n",
+      "Model time: 5.27s\n",
       "\n",
       "Confusion matrix:\n",
-      " [[298  23 292  46  74]\n",
-      " [  8  38  70  10   7]\n",
-      " [270  65 954 112 220]\n",
-      " [ 38  12 117  95  20]\n",
-      " [ 69  29 190  20 272]]\n",
+      " [[ 292   26  287   55   73]\n",
+      " [   3   63   54   10    3]\n",
+      " [ 272   59 1003  101  186]\n",
+      " [  36   14  101  110   21]\n",
+      " [  64   21  196   14  285]]\n",
       "\n",
       "Classification report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "        Fact       0.44      0.41      0.42       733\n",
-      "      Policy       0.23      0.29      0.25       133\n",
-      "       Value       0.59      0.59      0.59      1621\n",
-      "    Value(+)       0.34      0.34      0.34       282\n",
-      "    Value(-)       0.46      0.47      0.46       580\n",
+      "        Fact       0.44      0.40      0.42       733\n",
+      "      Policy       0.34      0.47      0.40       133\n",
+      "       Value       0.61      0.62      0.61      1621\n",
+      "    Value(+)       0.38      0.39      0.38       282\n",
+      "    Value(-)       0.50      0.49      0.50       580\n",
       "\n",
-      "    accuracy                           0.49      3349\n",
-      "   macro avg       0.41      0.42      0.41      3349\n",
-      "weighted avg       0.50      0.49      0.50      3349\n",
+      "    accuracy                           0.52      3349\n",
+      "   macro avg       0.45      0.47      0.46      3349\n",
+      "weighted avg       0.52      0.52      0.52      3349\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "vect = TfidfVectorizer(strip_accents='unicode')\n",
-    "vect.fit_transform(corpus).toarray()\n",
-    "test_vectorizer(vect)"
+    "test_vectorizer(TfidfVectorizer(ngram_range=(1,2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strip accents\n",
+    "\n",
+    "Remove accents and perform other character normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectorizer fit time: 0.92s\n",
+      "(Number of samples, Number of features): (16743, 69263)\n",
+      "\n",
+      "Model time: 5.33s\n",
+      "\n",
+      "Confusion matrix:\n",
+      " [[ 287   25  297   50   74]\n",
+      " [   3   62   55   10    3]\n",
+      " [ 277   60 1003   94  187]\n",
+      " [  36   14  103  110   19]\n",
+      " [  62   20  198   16  284]]\n",
+      "\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.43      0.39      0.41       733\n",
+      "      Policy       0.34      0.47      0.39       133\n",
+      "       Value       0.61      0.62      0.61      1621\n",
+      "    Value(+)       0.39      0.39      0.39       282\n",
+      "    Value(-)       0.50      0.49      0.50       580\n",
+      "\n",
+      "    accuracy                           0.52      3349\n",
+      "   macro avg       0.45      0.47      0.46      3349\n",
+      "weighted avg       0.52      0.52      0.52      3349\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_vectorizer(TfidfVectorizer(ngram_range=(1,2), strip_accents='unicode'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even though metrics are basically unchanged (in case of unigrams it lowers f1-score a lot), we are not sure how the words are affected turning into the same base form after the accents are stripped. Therefore we will not use this parameter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Document Frequency\n",
+    "\n",
+    "Ignore terms that appear less than 3 times, and terms that appear in more than 80% of the documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectorizer fit time: 1.17s\n",
+      "(Number of samples, Number of features): (16743, 19262)\n",
+      "\n",
+      "Model time: 1.22s\n",
+      "\n",
+      "Confusion matrix:\n",
+      " [[301  16 307  40  69]\n",
+      " [  4  58  58   8   5]\n",
+      " [286  54 977  95 209]\n",
+      " [ 39  13  96 115  19]\n",
+      " [ 75  10 201  13 281]]\n",
+      "\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.43      0.41      0.42       733\n",
+      "      Policy       0.38      0.44      0.41       133\n",
+      "       Value       0.60      0.60      0.60      1621\n",
+      "    Value(+)       0.42      0.41      0.42       282\n",
+      "    Value(-)       0.48      0.48      0.48       580\n",
+      "\n",
+      "    accuracy                           0.52      3349\n",
+      "   macro avg       0.46      0.47      0.47      3349\n",
+      "weighted avg       0.52      0.52      0.52      3349\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_vectorizer(TfidfVectorizer(ngram_range=(1,2), min_df=3, max_df=0.8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same accuracy, higher f1-scores for the lower support classes, and significantly lower number of features. An important parameter to use in the classification task."
    ]
   }
  ],
@@ -644,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
